--- a/browser/style.css
+++ b/browser/style.css
@@ -2,6 +2,7 @@ body {
     border: 0;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #fff;
 }
 
 body[data-theme="dark"] {
@@ -131,7 +132,14 @@ div.content {
 }
 
 div.content form .setting {
+    position: relative;
     margin-bottom: 20px;
+    box-sizing: border-box;
+}
+
+div.content form .setting > * {
+    display: inline-block;
+    vertical-align: middle;
 }
 
 div.content form .settingsLeft {
@@ -317,14 +325,15 @@ div.modal .btn.btn-usaflag:hover {
 }
 
 div.setting input[type="text"], div.setting select {
+    display: block !important;
     background-color: #ffffff8c;
     border-color: #E5E5E5;
     border-radius: 8px;
     border-width: 1.5px;
     border-style: solid;
     padding: 5px;
-    width: 50%;
-    max-width: 50%;
+    width: 60%;
+    max-width: 60%;
     max-height: 60%;
 }
 
@@ -332,6 +341,52 @@ body[data-theme="dark"] div.setting input[type="text"], body[data-theme="dark"] 
     background-color: #2d2d2d;
     border-color: #ffffff1a;
     color: white;
+}
+
+div.setting label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+input[type="checkbox"] {
+    position: relative;
+    width: 35px;
+    height: 21px;
+    appearance: none;
+    outline: none;
+    cursor: pointer;
+    background-color: #ffffff;
+    border: 1px solid #D9DADC;
+    border-radius: 50px;
+    box-shadow: inset -14px 0 0 0 #ffffff;
+    transition-duration: 200ms;
+}
+
+input[type="checkbox"]:disabled {
+    cursor: not-allowed;
+    opacity: .5;
+}
+
+input[type="checkbox"]:after {
+    position: absolute;
+    width: 18.2px;
+    height: 18.2px;
+    content: "";
+    top: 1px;
+    left: 1px;
+    background-color: transparent;
+    border-radius: 50%;
+    box-shadow: 2px 4px 6px rgba(0,0,0,0.2);
+}
+
+input[type="checkbox"]:checked {
+    border-color: #4ED164;
+    box-shadow: inset 14px 0 0 0 #4ED164;
+}
+
+input[type="checkbox"]:checked:after {
+    left: 14px;
+    box-shadow: -2px 4px 3px rgba(0,0,0,0.05);
 }
 
 /* KEYFRAMES */
