--- a/browser/style.css
+++ b/browser/style.css
@@ -20,11 +20,13 @@ input:focus, select:focus {
 
 div.control {
     display: block;
-    position: relative;
+    position: fixed;
     background-color: #F9F9F9;
+    top: 0;
     width: 100%;
     height: 30px;
     padding: 25px 0;
+    z-index: 9999;
     -webkit-user-select: none;
     user-select: none;
     -webkit-app-region: drag;
@@ -128,18 +130,36 @@ div.windowcontrols .dot:hover:not(.notavailable) {
 }
 
 div.content {
+    height: 425px;
+    overflow-y: auto;
+    margin-top: 85px;
     padding: 15px;
 }
 
 div.content form .setting {
     position: relative;
-    margin-bottom: 20px;
+    display: flow-root;
+    width: 80%;
+    margin: 0 auto;
+    background-color: rgba(0,0,0,0.08);
+    padding: 10px;
+    border-radius: 6px;
+    margin-bottom: 15px;
     box-sizing: border-box;
 }
 
 div.content form .setting > * {
     display: inline-block;
     vertical-align: middle;
+}
+
+div.content .settings {
+    position: relative;
+    display: block;
+    width: 65%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    box-sizing: border-box;
 }
 
 div.content form .settingsLeft {
@@ -326,13 +346,14 @@ div.modal .btn.btn-usaflag:hover {
 
 div.setting input[type="text"], div.setting select {
     display: block !important;
-    background-color: #ffffff8c;
+    background-color: transparent;
     border-color: #E5E5E5;
     border-radius: 8px;
     border-width: 1.5px;
     border-style: solid;
     padding: 5px;
     width: 60%;
+    float: right;
     max-width: 60%;
     max-height: 60%;
 }
@@ -353,6 +374,7 @@ input[type="checkbox"] {
     width: 35px;
     height: 21px;
     appearance: none;
+    float: right;
     outline: none;
     cursor: pointer;
     background-color: #ffffff;
